--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.11",
     "@nrwl/next": "15.3.3",
+    "@react-aria/ssr": "^3.4.1",
     "core-js": "^3.6.5",
     "next": "13.0.0",
     "react": "18.2.0",
