--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^1.0.0-beta.11",
     "@nrwl/next": "15.3.3",
     "@react-aria/ssr": "^3.4.1",
+    "@react-icons/all-files": "^4.1.0",
     "core-js": "^3.6.5",
     "next": "13.0.0",
     "react": "18.2.0",
