--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "private": true,
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
-    "@nrwl/next": "15.3.3",
+    "@nrwl/next": "15.6.3",
     "@react-aria/ssr": "^3.4.1",
     "@react-icons/all-files": "^4.1.0",
     "core-js": "^3.6.5",
-    "next": "13.0.0",
+    "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
@@ -22,13 +22,14 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
-    "@nrwl/cypress": "15.3.3",
-    "@nrwl/eslint-plugin-nx": "15.3.3",
-    "@nrwl/jest": "15.3.3",
-    "@nrwl/linter": "15.3.3",
-    "@nrwl/react": "15.3.3",
-    "@nrwl/web": "15.3.3",
-    "@nrwl/workspace": "15.3.3",
+    "@nrwl/cypress": "15.6.3",
+    "@nrwl/eslint-plugin-nx": "15.6.3",
+    "@nrwl/jest": "15.6.3",
+    "@nrwl/js": "15.6.3",
+    "@nrwl/linter": "15.6.3",
+    "@nrwl/react": "15.6.3",
+    "@nrwl/web": "15.6.3",
+    "@nrwl/workspace": "15.6.3",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -37,9 +38,9 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
-    "cypress": "^11.0.0",
+    "cypress": "^12.2.0",
     "eslint": "~8.15.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
@@ -48,7 +49,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "15.3.3",
+    "nx": "15.6.3",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
